--- a/css/syle.scss
+++ b/css/syle.scss
@@ -1,19 +1,140 @@
+$orange : #D3573C;
+$darkOrange : #901C1C;
+$grey : #757575;
 
 
-#listPhotographers 
+*
 {
-    li 
-    {
-        a
-        {
-            height: 100%;
-            img 
-            {
-                width: 200px;
-                border-radius: 50%;
-            }
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 400;
+}
 
+header 
+{
+
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
+    height: 150px;
+
+
+    a
+    {
+        text-decoration: none;
+     
+        h1 
+        {
+            font-size: 38px;
+            color: $darkOrange;
+            letter-spacing: 0.1em;
+            font-weight: 800;
+            svg 
+            {
+                margin-right: 0.1em;
+            }
         }
 
+    }
+    ul 
+    {
+        display: flex;
+        list-style: none;
+        margin: 30px;
+
+        li
+        {
+            font-size: 11px;
+            height: 22px;
+            padding: 0.3em;
+            margin: 0.5em;
+            color: $darkOrange;
+            font-weight: 900;
+            border: 0.5px solid #C4C4C4;
+            box-sizing: border-box;
+            border-radius: 11px;
+        }
+    }
+
+    h1 
+    {
+        color: $darkOrange;
+        font-size: 36px;
+    }
+}
+
+
+#card
+{
+    display: none;
+}
+main
+{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+ 
+    section 
+    {
+        width: 33%;
+        margin: auto;
+        text-align: center;
+        margin-top: 1em;
+
+        a
+        {
+
+            text-decoration: none;
+
+            div 
+            {
+                width: 200px;
+                height: 200px;
+                overflow: hidden;
+                border-radius: 50%;
+                margin: auto;
+            
+                img 
+                {
+                    height: 120%;
+                    position: relative;
+                    right: 10%;
+                    
+                }
+            }
+
+            h2
+            {
+                color: $orange;
+                font-size: 36px;
+                margin: 0;
+                margin-top: 0.5em;
+            }
+        }
+        h3
+        {
+            color: $darkOrange;
+            font-size: 13px;
+            margin: 0;
+        }
+        p 
+        {
+            font-size: 10px;
+            margin: 0.5em;
+        }
+        small 
+        {
+            font-size: 9px;
+            color: $grey;
+        }
+        ul
+        {
+            li
+            {
+                list-style: none;
+            }
+        }
     }
 }
