--- a/css/photographerStyle.css
+++ b/css/photographerStyle.css
@@ -1,14 +1,28 @@
-#photographerPortrait {
+.photographerPortrait {
   width: 200px;
 }
 
-#photoGallery {
-  width: 200px;
-}
-
-#gallery {
+.gallery {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#model {
+  display: none;
+}
+
+.photoContainer {
+  width: 25%;
+  margin: 2em;
+}
+
+.photoContainer img, .photoContainer video {
+  width: 100%;
 }
 /*# sourceMappingURL=photographerStyle.css.map */
