--- a/css/syle.css
+++ b/css/syle.css
@@ -20,7 +20,7 @@ header a {
 }
 
 header a h1 {
-  font-size: 38px;
+  font-size: 45px;
   color: #901C1C;
   letter-spacing: 0.1em;
   font-weight: 800;
@@ -121,7 +121,30 @@ main section small {
   color: #757575;
 }
 
+main section ul {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin: auto;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
 main section ul li {
   list-style: none;
+  color: #901C1C;
+  border: 0.5px solid #C4C4C4;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 11px;
+  padding: 4px;
+  margin: 3px;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  font-weight: bold;
 }
 /*# sourceMappingURL=syle.css.map */
