--- a/css/syle.scss
+++ b/css/syle.scss
@@ -135,7 +135,7 @@ main
             display: flex;
             width: 100%;
             margin: auto;
-            justify-content: space-evenly;
+            justify-content: center;
 
             li
             {
