--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -37,7 +37,7 @@
   min-height: 100vh;
 }
 
-.lightbox .lightbox__container img {
+.lightbox .lightbox__container img, .lightbox .lightbox__container video {
   max-height: 95vh;
   max-width: 95vh;
 }
