--- a/css/lightbox.scss
+++ b/css/lightbox.scss
@@ -23,7 +23,7 @@
 
     .lightbox__container {
 
-        img 
+        img, video
         {
             max-height: 95vh;
             max-width: 95vh;
