--- a/css/syle.css
+++ b/css/syle.css
@@ -49,6 +49,7 @@ header ul li {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 11px;
+  cursor: pointer;
 }
 
 header h1 {
