--- a/css/syle.scss
+++ b/css/syle.scss
@@ -53,6 +53,7 @@ header
             border: 0.5px solid #C4C4C4;
             box-sizing: border-box;
             border-radius: 11px;
+            cursor: pointer;
         }
     }
 
