--- a/css/form.css
+++ b/css/form.css
@@ -5,9 +5,9 @@
 .bgform {
   padding: 2em;
   position: absolute;
-  width: 30%;
+  width: 50%;
   left: 45%;
-  margin-left: -15%;
+  margin-left: -25%;
   top: 50px;
   min-height: 60%;
   background-color: #DB8876;
@@ -27,7 +27,7 @@
 }
 
 .bgform h1 {
-  font-size: 64px;
+  font-size: 45px;
 }
 
 .bgform .formData, .bgform h1 {
@@ -36,18 +36,18 @@
 }
 
 .bgform .formData label, .bgform h1 label {
-  font-size: 36px;
+  font-size: 25px;
 }
 
 .bgform .formData input, .bgform h1 input {
   width: 100%;
-  height: 80px;
+  height: 68px;
   border-radius: 5px;
   border: none;
-  margin-top: 0.5em;
+  margin-top: 0.1em;
   margin-bottom: 0.5em;
   font-size: 25px;
-  padding: 0.5em;
+  padding: 0.2em;
 }
 
 .bgform #submitBtn {
@@ -57,6 +57,10 @@
   color: white;
   font-size: 18px;
   font-weight: 700;
-  margin-top: 2em;
+  margin-top: 0.5em;
+}
+
+.bgform #message {
+  height: 110px;
 }
 /*# sourceMappingURL=form.css.map */
