--- a/css/form.scss
+++ b/css/form.scss
@@ -7,9 +7,9 @@
 {
     padding: 2em;
     position : absolute;
-    width : 30%;
+    width : 50%;
     left : 45%;
-    margin-left : -15%;
+    margin-left : -25%;
     top : 50px;
     min-height: 60%;
     background-color: #DB8876;
@@ -28,7 +28,7 @@
         }
     }
     h1 {
-        font-size: 64px;
+        font-size: 45px;
     }
 
     .formData, h1
@@ -37,19 +37,19 @@
         margin: auto;
 
         label {
-            font-size: 36px;
+            font-size: 25px;
         }
 
         input 
         {
             width: 100%;
-            height: 80px;
+            height: 68px;
             border-radius: 5px;
             border: none;
-            margin-top: 0.5em;
+            margin-top: 0.1em;
             margin-bottom: 0.5em;
             font-size: 25px;
-            padding: 0.5em;
+            padding: 0.2em;
         }
     }
 
@@ -61,6 +61,10 @@
         color: white;
         font-size: 18px;
         font-weight: 700;
-        margin-top: 2em;
+        margin-top: 0.5em;
+    }
+    #message
+    {
+        height: 110px;
     }
 }
