--- a/css/syle.scss
+++ b/css/syle.scss
@@ -11,14 +11,11 @@ $grey : #757575;
 
 header 
 {
-
     display: flex;
     justify-content: space-between;
     width: 80%;
     margin: auto;
     height: 150px;
-
-
     a
     {
         text-decoration: none;
@@ -136,6 +133,7 @@ main
             display: flex;
             width: 100%;
             margin: auto;
+            margin-top: 0.3em;
             justify-content: center;
 
             li
@@ -152,6 +150,66 @@ main
                 text-align: center;
                 font-weight: bold;
             }
+        }
+    }
+}
+
+
+
+@media screen and (max-width : 1050px)
+{
+    main 
+    {
+        section
+        {
+            width: 50%;
+        }
+    }
+}
+@media screen and (max-width : 450px)
+{
+    header 
+    {
+        display: flex;
+        flex-wrap: wrap;
+        #titlePhotoHeader
+        {
+            font-size: 14px;
+            position: absolute;
+            right: 1.3em;
+            top: 1.3em;
+        }
+        a
+        {
+            h1
+            {
+                font-size: 20px;
+                margin: 0;
+                margin-top: 0.8em;
+                svg
+                {
+                    width: 20px;
+                    height: 15px;
+                }
+            }
+        }
+    }
+    #nav
+    {
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: auto;
+        padding: 0;
+    }
+
+    main 
+    {
+        section
+        {
+            width: 95%;
+            margin-bottom: 1em;
         }
     }
 }
