--- a/css/form.scss
+++ b/css/form.scss
@@ -5,7 +5,6 @@
 
 .bgform
 {
-    padding: 2em;
     position : absolute;
     width : 50%;
     left : 45%;
@@ -19,8 +18,11 @@
 
     #titleCloseForm
     {
+        width: 80%;
         display: flex;
+        justify-content: space-between;
         margin-bottom: 1em;
+        margin: auto;
         
         #closeForm
         {
@@ -28,27 +30,27 @@
         }
     }
     h1 {
-        font-size: 45px;
+        font-size: 35px;
     }
 
-    .formData, h1
+    .formData
     {
-        width: 100%;
+        width: 80%;
         margin: auto;
 
         label {
-            font-size: 25px;
+            font-size: 20px;
         }
 
         input 
         {
             width: 100%;
-            height: 68px;
+            height: 60px;
             border-radius: 5px;
             border: none;
             margin-top: 0.1em;
             margin-bottom: 0.5em;
-            font-size: 25px;
+            font-size: 20px;
             padding: 0.2em;
         }
     }
@@ -60,11 +62,56 @@
         padding: 1em;
         color: white;
         font-size: 18px;
-        font-weight: 700;
         margin-top: 0.5em;
+        border: none;
+        display: block;
+        margin : auto;        
     }
     #message
     {
         height: 110px;
+    }
+}
+
+@media screen and ( max-width : 1000px)
+{
+    .bgform
+    {
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-height: 100%;
+        width: 100%;
+        margin: 0!important;
+
+        h1
+        {
+            font-size : 30px;
+        }   
+
+        #closeForm
+        {
+            svg
+            {
+                width: 20px;
+                height: 20px;
+            }
+        }
+
+        #message 
+        {
+            height :140px;
+            margin-bottom: 2em;
+        }
+
+        #submitBtn
+        {
+            font-weight: 400;
+            padding: 0.4em;
+            height: 35px;
+            width: 170px;
+
+        }
     }
 }
