--- a/css/photographerStyle.css
+++ b/css/photographerStyle.css
@@ -1,3 +1,8 @@
+* {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+}
+
 html, body {
   overflow-x: hidden;
 }
@@ -15,6 +20,21 @@ header {
   margin-left: 1.5em;
 }
 
+header a {
+  text-decoration: none;
+}
+
+header a h1 {
+  font-size: 45px;
+  color: #901C1C;
+  letter-spacing: 0.1em;
+  font-weight: 800;
+}
+
+header a h1 svg {
+  margin-right: 0.1em;
+}
+
 .photographerCard {
   margin-bottom: 2em !important;
   display: -webkit-box;
@@ -28,6 +48,11 @@ header {
   padding: 1.5em;
 }
 
+.photographerCard #btnContact:hover {
+  background: #DB8876;
+  color: black;
+}
+
 .photographerCard #photographerPortraitContainer {
   width: 200px;
   height: 200px;
@@ -39,6 +64,37 @@ header {
   height: 120%;
   position: relative;
   right: 10%;
+}
+
+.photographerCard .asidePhotographer {
+  position: fixed;
+  bottom: 0;
+  background-color: #DB8876;
+  right: 20px;
+  min-width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 0.6em;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.photographerCard .asidePhotographer * {
+  font-weight: bold;
+}
+
+.photographerCard .asidePhotographer #asideLike {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.photographerCard .asidePhotographer #asideLike i {
+  margin-top: 0.2em;
+  margin-left: 0.5em;
 }
 
 .photographerNameContact {
@@ -59,13 +115,14 @@ header {
 .photographerNameContact button {
   background-color: #901C1C;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 17px;
   color: white;
   border-radius: 5px;
   border: 0px;
   margin-left: 100px;
   padding: 17px;
-  height: 70px;
+  height: 60px;
+  margin-top: 1em;
 }
 
 .photographerLocation {
@@ -75,6 +132,7 @@ header {
 
 .photographerTagLine {
   font-size: 18px;
+  color: #757575;
 }
 
 .tagList {
@@ -111,6 +169,7 @@ header {
   font-weight: bold;
   font-size: 18px;
   padding: 0;
+  margin: 1em;
   margin-top: 1.7em;
 }
 
@@ -129,6 +188,10 @@ header {
   background-color: #901C1C;
   padding: 1em;
   cursor: pointer;
+}
+
+#filtre #listFilter #btnFilterMain {
+  border-radius: 5px;
 }
 
 #filtre #listFilter .hideBtn {
@@ -208,40 +271,79 @@ header {
 }
 
 @media screen and (max-width: 1000px) {
-  #btnContact {
+  #filtre {
     display: none;
+  }
+  #btnContact {
+    position: fixed;
+    bottom: 5%;
+    letter-spacing: 1px;
+    height: 30px !important;
+    font-size: 15px;
+    padding: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-weight: 400;
+    width: 200px;
+    margin: 1% auto;
+    left: 0;
+    right: 0;
   }
   .media, .photoContainer {
     width: 300px !important;
     margin: auto;
   }
+  .asidePhotographer {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 650px) {
+  header {
+    margin: 0;
+    margin-top: 1em;
+  }
+  header #titlePhotoHeader {
+    font-size: 14px;
+  }
+  header a h1 {
+    font-size: 30px;
+    margin: 0.9em;
+    margin-bottom: 0.4em;
+  }
+  header a h1 svg {
+    width: 30px;
+    height: 20px;
+  }
   body {
     margin: 0;
   }
-  .photographerCard {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  #photographerPortraitContainer {
+    width: 130px !important;
+    height: 120px !important;
+  }
+  .photographerName {
+    font-size: 36px !important;
   }
   .tagList {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .tagList li {
+    padding: 2.5px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    margin-left: 0;
   }
   .photographerNameContact h1 {
     width: 100%;
   }
-  #photographerPortraitContainer {
-    margin: auto;
-    margin-top: 1em;
+  .photographerLocation, .photographerTagLine {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-size: 13px;
+    font-weight: 400;
   }
   .media, .photoContainer {
     width: 300px !important;
@@ -250,6 +352,13 @@ header {
   .media {
     height: 200px !important;
     margin-top: 1em;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  #photographerPortraitContainer {
+    width: 130px !important;
+    height: 100px !important;
   }
 }
 /*# sourceMappingURL=photographerStyle.css.map */
