--- a/css/syle.scss
+++ b/css/syle.scss
@@ -152,6 +152,7 @@ main
                 line-height: 16px;
                 text-align: center;
                 font-weight: bold;
+                cursor: pointer;
             }
         }
     }
