--- a/css/syle.css
+++ b/css/syle.css
@@ -155,6 +155,7 @@ main section ul li {
   line-height: 16px;
   text-align: center;
   font-weight: bold;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1420px) {
