--- a/css/lightbox.scss
+++ b/css/lightbox.scss
@@ -13,6 +13,10 @@
 
     button {
         background-color: white;
+        &:focus 
+        {
+            outline-color: white;
+        }
     }
 
     i {
