--- a/css/syle.css
+++ b/css/syle.css
@@ -15,19 +15,28 @@ header {
   height: 150px;
 }
 
+header #mainContentLink {
+  background-color: #D3573C;
+  border-radius: 5px;
+  color: black;
+  padding: 0.3em;
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 160px;
+  margin-left: -80px;
+  left: 50%;
+  z-index: 2000;
+  text-align: center;
+  font-weight: 700;
+}
+
 header a {
   text-decoration: none;
 }
 
-header a h1 {
-  font-size: 45px;
-  color: #901C1C;
-  letter-spacing: 0.1em;
-  font-weight: 800;
-}
-
-header a h1 svg {
-  margin-right: 0.1em;
+header a svg {
+  margin: 1.5em;
 }
 
 header ul {
@@ -159,30 +168,24 @@ main section ul li {
 }
 
 @media screen and (max-width: 1420px) {
-  #nav {
-    margin-top: 1em !important;
-    margin-bottom: 0.5em !important;
+  main {
+    margin-top: 2em;
   }
   main section {
     width: 50%;
   }
   header #titlePhotoHeader {
-    font-size: 20px;
+    font-size: 18px;
     position: absolute;
     right: 1.3em;
-    top: 1.3em;
+    top: 1.9em;
   }
-  header a h1 {
-    font-size: 30px;
-    margin: 0;
-    margin-top: 0.8em;
-  }
-  header a h1 svg {
-    width: 30px;
-    height: 20px;
+  header a svg {
+    width: 150px;
+    margin-bottom: 0;
   }
   #nav {
-    width: 50%;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -193,26 +196,28 @@ main section ul li {
             justify-content: center;
     margin: auto;
     padding: 0;
+    margin-top: 1em !important;
+    margin-bottom: 0.5em !important;
   }
 }
 
 @media screen and (max-width: 1000px) {
   header {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
-  header #nav {
+  header nav {
     width: 90%;
+    margin: auto;
+    text-align: center;
   }
 }
 
 @media screen and (max-width: 500px) {
-  header #titlePhotoHeader {
-    font-size: 14px;
-  }
   header a h1 {
     font-size: 20px;
   }
